* added getContextClassLoader() method to AbstractDelegatedExecutionApplicationContext for pluggable thread context 
  class loader strategy
* improved AbstractOsgiBundleApplicationContext behaviour if the internal resource loader is not set
* improved bundle class loader creation by using an internal cache

Package org.springframework.osgi.service
* refined weaving process for service importers so that knowledge of org.springframework.osgi package is not required
* fixed potential infrastructure class leak through the thread context class loader management of imported services
* improved proxy class loader creation by using an internal cache

Package org.springframework.osgi.extender
* added OsgiApplicationContextCreator interface for handling the extender contexts creation
* added OsgiBeanFactoryPostProcessor interface for customizing the contexts created by the extender
* changed package of the internal, private bundle activator
* added filtering by type for the discovered namespace handler resolvers to avoid usage of classes with incompatible
  wiring
* improved listener list creation by reusing the extender bundle class loader

Package org.springframework.osgi.io
* extended OsgiBundleResource to implement ContextResource
* fixed internal PackageAdminResolver parsing of Require-Bundle entries which specify versions

Package org.springframework.osgi.service
* refined OsgiServiceCollectionProxyFactoryBean to allow for configurable 'greedy-proxying' behaviour
* changed service collection behaviour to not perform greedy proxying by default
* improved the proxy weaving process by providing the aop infrastructure dependencies internally

Package org.springframework.osgi.test
* improved installed bundles resolving when PackageAdmin service is available

Package org.springframework.osgi.util
* BundleDelegatingClassLoader constructor visibility changed from private to protected
* fixed sporadic exception occuring in DebugUtils when analyzing class loading errors
